@@ -1,23 +1,13 @@
 package com.example.university.controller;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
+import java.time.LocalDate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.web.bind.annotation.*;
 
 import com.example.university.dto.SupportMaterialRequestDTO;
 import com.example.university.dto.SupportMaterialResponseDTO;
@@ -26,61 +16,58 @@ import com.example.university.repository.SupportMaterialRepository;
 
 @RestController
 @RequestMapping("support-material")
+@CrossOrigin(origins = "*")
 public class SupportMaterialController {
 
     @Autowired
     private SupportMaterialRepository supportMaterialRepository;
 
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
+    // Obtém todos os materiais cadastrados
     @GetMapping
-    public ResponseEntity<List<SupportMaterialResponseDTO>> getAll(@RequestParam(required = false) Long teamId) {
-        Long effectiveTeamId = teamId != null ? teamId : 1L;
-        List<SupportMaterialResponseDTO> supportMaterialList = supportMaterialRepository.findAll().stream()
-                .filter(material -> material.getTeamId() != null && material.getTeamId().equals(effectiveTeamId))
-                .map(SupportMaterialResponseDTO::new)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(supportMaterialList);
+    public ResponseEntity<List<SupportMaterialResponseDTO>> getAllMaterials() {
+        // Obtém o usuário autenticado do contexto do Spring Security
+        String userEmail = SecurityContextHolder.getContext().getAuthentication().getName();
+        System.out.println("Usuário autenticado no Spring Security: " + userEmail);
+    
+        List<SupportMaterial> materials = supportMaterialRepository.findAll();
+    
+        return ResponseEntity.ok(
+            materials.stream()
+                     .map(SupportMaterialResponseDTO::new)
+                     .toList()
+        );
     }
 
-    @GetMapping("/user-team-id")
-    public ResponseEntity<Long> getUserTeamId() {
-        Long fakeTeamId = 1L; // ID fixo para testes
-        return ResponseEntity.ok(fakeTeamId);
-    }
-
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
+    // Criação de material de apoio
     @PostMapping
-    public ResponseEntity<SupportMaterialResponseDTO> saveSupportMaterial(@RequestBody SupportMaterialRequestDTO data) {
-        SupportMaterial supportMaterialData = new SupportMaterial(data.name(), data.autor(), data.link(), data.teamId());
-        supportMaterialData = supportMaterialRepository.save(supportMaterialData);
-        SupportMaterialResponseDTO responseDTO = new SupportMaterialResponseDTO(supportMaterialData);
-        return ResponseEntity.status(HttpStatus.CREATED).body(responseDTO);
+    public ResponseEntity<SupportMaterialResponseDTO> create(@RequestBody SupportMaterialRequestDTO data) {
+        // Obtém o e-mail do usuário logado
+        String userEmail = SecurityContextHolder.getContext().getAuthentication().getName();
+
+        // Cria um novo material com o usuário logado como autor
+        SupportMaterial material = new SupportMaterial(data, userEmail);
+        
+        material = supportMaterialRepository.save(material);
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(new SupportMaterialResponseDTO(material));
     }
 
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
+    // Atualização de material
     @PutMapping("/{id}")
-    public ResponseEntity<SupportMaterialResponseDTO> updateSupportMaterial(
-            @PathVariable Long id, @RequestBody SupportMaterialRequestDTO data) {
-        Optional<SupportMaterial> existingSupportMaterial = supportMaterialRepository.findById(id);
-
-        if (existingSupportMaterial.isPresent()) {
-            SupportMaterial supportMaterial = existingSupportMaterial.get();
-            supportMaterial.setName(data.name());
-            supportMaterial.setAutor(data.autor());
-            supportMaterial.setLink(data.link());
-            supportMaterial.setDate(LocalDate.now());
-            supportMaterial.setTeamId(data.teamId());
-
-            supportMaterialRepository.save(supportMaterial);
-
-            SupportMaterialResponseDTO responseDTO = new SupportMaterialResponseDTO(supportMaterial);
-            return ResponseEntity.ok(responseDTO);
-        } else {
-            return ResponseEntity.notFound().build();
-        }
+    public ResponseEntity<SupportMaterialResponseDTO> update(
+        @PathVariable Long id, @RequestBody SupportMaterialRequestDTO data) {
+        
+        return supportMaterialRepository.findById(id)
+            .map(material -> {
+                material.updateFromDTO(data);
+                return ResponseEntity.ok(
+                    new SupportMaterialResponseDTO(supportMaterialRepository.save(material))
+                );
+            })
+            .orElse(ResponseEntity.notFound().build());
     }
 
-    @CrossOrigin(origins = "*", allowedHeaders = "*")
+    // Exclusão de material
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteSupportMaterial(@PathVariable Long id) {
         Optional<SupportMaterial> supportMaterialOptional = supportMaterialRepository.findById(id);
